--- a/secrets.toml
+++ b/secrets.toml
@@ -1,7 +1,7 @@
 
 [gmail]
 email = "mittapallilokeswarreddy10@gmail.com"
-app_password = "YOUR_GMAIL_APP_PASSWORD"
+app_password = "dxla ypaw rlsx oumu"
 
 [twilio]
 account_sid = "YOUR_TWILIO_ACCOUNT_SID"
