--- a/adherence_project/.streamlit/secrets.toml
+++ b/adherence_project/.streamlit/secrets.toml
@@ -3,6 +3,6 @@ email = "mittapallilokeswarreddy10@gmail.com"
 app_password = "dxla ypaw rlsx oumu"
 
 [twilio]
-account_sid = "YOUR_TWILIO_ACCOUNT_SID"
+account_sid = "US48914caaa4545107fd73bc7ca4151c0b"
 auth_token = "YOUR_TWILIO_AUTH_TOKEN"
-from_number = "+1234567890"
+from_number = "+917013117053"
