--- a/adherence_project/.streamlit/secrets.toml
+++ b/adherence_project/.streamlit/secrets.toml
@@ -3,6 +3,6 @@ email = "mittapallilokeswarreddy10@gmail.com"
 app_password = "dxla ypaw rlsx oumu"
 
 [twilio]
-account_sid = "US48914caaa4545107fd73bc7ca4151c0b"
-auth_token = "YOUR_TWILIO_AUTH_TOKEN"
+account_sid = "ACe29137efd3435ec4554b729147da7002"
+auth_token = "1d2bae2d70c9520321e4a99c28840b37"
 from_number = "+917013117053"
